--- a/DatabaseDataStock.xaml
+++ b/DatabaseDataStock.xaml
@@ -56,8 +56,9 @@
     </Page.Resources>
     <Grid Background="#ECECEA">
         <StackPanel>
-            <Button Height="30" Style="{StaticResource BaseButtonStyle}" Content="SWTICH TO BANK DATA" FontSize="18"/>
-            <DataGrid Name="TransactionTableXAML">
+            <Button Height="30" Style="{StaticResource BaseButtonStyle}" Content="SWTICH TO BANK DATA" FontSize="18" Click="Button_Click"/>
+            <DataGrid Name="TransactionTableXAML" Height="270" AutoGenerateColumns="False" ScrollViewer.CanContentScroll="False"  ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                      ItemsSource="{Binding Path=tableAttributes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="VerticalContentAlignment" Value="Center" />
@@ -92,15 +93,18 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
+                    <Style TargetType="DataGridCell">
+                        <Setter Property="ToolTip" Value="{Binding earningMethod}"/>
+                    </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Transaction date" Width="*" Binding="{Binding transactionDate}"/>
-                    <DataGridTextColumn Header="Stock name" Width="*" Binding="{Binding stockName}"/>
-                    <DataGridTextColumn Header="Stock Price"  Width="*" Binding="{Binding stockPrice}"/>
-                    <DataGridTextColumn Header="Transaction type" Width="*" Binding="{Binding transactionType}"/>
-                    <DataGridTextColumn Header="Quantity" Width="*" Binding="{Binding quantity}"/>
-                    <DataGridTextColumn Header="Profit" Width="*" Binding="{Binding profit}"/>
-                    <DataGridTextColumn Header="Date of Import" Width="*" Binding="{Binding writeDate}"/>
+                    <DataGridTextColumn Header="Transaction date" Width="auto" Binding="{Binding transactionDate}"/>
+                    <DataGridTextColumn Header="Stock name" Width="auto" Binding="{Binding stockName}"/>
+                    <DataGridTextColumn Header="Stock Price"  Width="auto" Binding="{Binding stockPrice}"/>
+                    <DataGridTextColumn Header="Transaction type" Width="auto" Binding="{Binding transactionType}"/>
+                    <DataGridTextColumn Header="QTY-original (current)" Width="*" Binding="{Binding originalAndCurrentQuantity}"/>
+                    <DataGridTextColumn Header="Profit / Expense" Width="auto" Binding="{Binding profit}"/>
+                    <DataGridTextColumn Header="Date of Import" Width="auto" Binding="{Binding writeDate}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
